force-app/main/default/objects/NF_Form_Publication__c/NF_Form_Publication__c.object-meta.xml
<CustomObject>
    <description>Operational publication history for a TwinaForms form version.</description>
    <label>NF Form Publication</label>
    <nameField>
        <displayFormat>PUB-{0000}</displayFormat>
        <label>Publication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NF Form Publications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>