force-app/main/default/objects/NF_Form_Publication__c/fields/AWS_Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>AWS_Response_JSON__c</fullName>
    <description>Optional admin-only AWS registration or publish response payload.</description>
    <inlineHelpText>AWS response JSON for debugging or audit purposes.</inlineHelpText>
    <label>AWS Response JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>