force-app/main/default/objects/NF_Form_Publication__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Failure summary if the publication operation did not succeed.</description>
    <inlineHelpText>Error summary.</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>