force-app/main/default/objects/NF_Form_Publication__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Form associated with this publication record.</description>
    <inlineHelpText>Related form.</inlineHelpText>
    <label>Form</label>
    <referenceTo>NF_Form__c</referenceTo>
    <relationshipLabel>Form Publications</relationshipLabel>
    <relationshipName>FormPublications</relationshipName>
    <type>Lookup</type>
</CustomField>