force-app/main/default/objects/NF_Form_Publication__c/fields/Form_Version__c.field-meta.xml
<CustomField>
    <fullName>Form_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Form version associated with this publication record.</description>
    <inlineHelpText>Related form version.</inlineHelpText>
    <label>Form Version</label>
    <referenceTo>NF_Form_Version__c</referenceTo>
    <relationshipLabel>Version Publications</relationshipLabel>
    <relationshipName>VersionPublications</relationshipName>
    <type>Lookup</type>
</CustomField>