force-app/main/default/objects/NF_Form_Publication__c/fields/Generated_HTML_Ref__c.field-meta.xml
<CustomField>
    <fullName>Generated_HTML_Ref__c</fullName>
    <description>Reference to the generated HTML output location.</description>
    <inlineHelpText>HTML output location or storage reference.</inlineHelpText>
    <label>Generated HTML Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>