force-app/main/default/objects/NF_Form_Publication__c/fields/Publication_Status__c.field-meta.xml
<CustomField>
    <fullName>Publication_Status__c</fullName>
    <description>Status of the publication operation.</description>
    <inlineHelpText>Pending, success, or failed.</inlineHelpText>
    <label>Publication Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Success</fullName><default>false</default><label>Success</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>