force-app/main/default/objects/NF_Form_Publication__c/fields/Publication_Type__c.field-meta.xml
<CustomField>
    <fullName>Publication_Type__c</fullName>
    <description>Publication operation type.</description>
    <inlineHelpText>Publish, republish, unpublish, or register only.</inlineHelpText>
    <label>Publication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Publish</fullName><default>true</default><label>Publish</label></value>
            <value><fullName>Republish</fullName><default>false</default><label>Republish</label></value>
            <value><fullName>Unpublish</fullName><default>false</default><label>Unpublish</label></value>
            <value><fullName>Register Only</fullName><default>false</default><label>Register Only</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>