force-app/main/default/objects/NF_Form_Publication__c/fields/Published_At__c.field-meta.xml
<CustomField>
    <fullName>Published_At__c</fullName>
    <description>Datetime when the publication operation occurred.</description>
    <inlineHelpText>Published at.</inlineHelpText>
    <label>Published At</label>
    <type>DateTime</type>
</CustomField>