force-app/main/default/objects/NF_Form_Publication__c/fields/Published_By__c.field-meta.xml
<CustomField>
    <fullName>Published_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who initiated the publication operation.</description>
    <inlineHelpText>Published by.</inlineHelpText>
    <label>Published By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>NF Form Publications Published By</relationshipLabel>
    <relationshipName>NFFormPublicationsPublishedBy</relationshipName>
    <type>Lookup</type>
</CustomField>