force-app/main/default/objects/NF_Form_Publication__c/fields/Published_Form_Id__c.field-meta.xml
<CustomField>
    <fullName>Published_Form_Id__c</fullName>
    <description>Form id used by the publication operation.</description>
    <inlineHelpText>Published form id.</inlineHelpText>
    <label>Published Form Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>