force-app/main/default/objects/NF_Form_Publication__c/listViews/Debug_All_Records.listView-meta.xml
<ListView>
    <fullName>Debug_All_Records</fullName>
    <columns>NAME</columns>
    <columns>Form__c</columns>
    <columns>Form_Version__c</columns>
    <columns>Publication_Status__c</columns>
    <columns>Publication_Type__c</columns>
    <columns>Published_Form_Id__c</columns>
    <columns>Generated_HTML_Ref__c</columns>
    <columns>Published_At__c</columns>
    <columns>Published_By__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>Debug - All Records</label>
</ListView>